tests/error/comptime_expr_errors/invalid_type_arg_implicit.err
Error: Invalid type argument (at $FILE:8:23)
  | 
6 | 
7 | @compile_guppy
8 | def foo(xs: array[int, a]) -> None:
  |                        ^ Comptime expression evaluating to `1.0` is not a valid type
  |                          argument

Guppy compilation failed due to 1 previous error
